# ellipsoid

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
design/: Com.drawio  structure.drawio
include/: CMakeLists.txt  ellipsoid.h
include/algorithm/: alg.h
include/algorithm/metric/: BesselSecondTheme.h  FirstTheme.h  GaussSecondTheme.h  SecondTheme.h
include/ds/: Area.h  Length.h
include/geom/: Ellipsoid.h  FixedSizeCoordinateSequence.h  GeoCoordinate.h  GeoCoordinateSequence.h  GeoEarth.h  GeoEnvelope.h  GeoFactory.h  GeoGeometry.h  GeoGeometryType.h  GeoLineSegment.h  GeoLineString.h  GeoLinearRing.h  GeoMultiLineString.h  GeoMultiPolygon.h  GeoPoint.h  GeoPolygon.h  GeoReferenceSystem.h  geom.h
include/io/: GeoJsonReader.h  GeoJsonWriter.h  ParseException.h  WKTReader.h  WKTWriter.h  io.h
include/op/: GeoEarthLoader.h  op.h
include/op/buffer/: BufferOp.h  buffer.h
include/op/metric/: AreaMetric.h  AzimuthMetric.h  BaseMetric.h  DistanceMetric.h  LengthMetric.h  MetricOp.h  metric.h
include/util/: BaseException.h  IllegalArgumentException.h  InvalidDataFormatException.h  Macro.h  MathTools.h  util.h
include/vend/: vend.h
src/: CMakeLists.txt
src/algorithm/: alg.cc
src/algorithm/metric/: BesselSecondTheme.cc  GaussSecondTheme.cc
src/ds/: Area.cc  Length.cc
src/geom/: Ellipsoid.cc  GeoCoordinate.cc  GeoCoordinateSequence.cc  GeoEarth.cc  GeoFactory.cc  GeoGeometry.cc  GeoLineSegment.cc  GeoLineString.cc  GeoLinearRing.cc  GeoMultiLineString.cc  GeoMultiPolygon.cc  GeoPoint.cc  GeoPolygon.cc  GeoReferenceSystem.cc
src/io/: GeoJsonReader.cc  GeoJsonWriter.cc  WKTReader.cc  WKTWriter.cc
src/op/: GeoEarthLoader.cc
src/op/metric/: AreaMetric.cc  AzimuthMetric.cc  DistanceMetric.cc  LengthMetric.cc
src/util/: MathTools.cc
